--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Startup Landing</title>
-		<link rel="stylesheet" type="text/css" href="mystyle.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 </html>
