--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
 <html> 
+
 	<head>
 		<meta charset="UTF-8">
 		<title>Startup Landing</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	</head>
+
+	<body>
+
+		<nav class="top-navigation">
+			<div class="content">
+				<ul class="links">
+					<li class="active">Meet Karma</li>
+				    <li>How It works</li>
+				    <li>Store</li>
+				    <li>Blog</li>
+				    <li>Help</li>
+				    <li>Log in</li>
+				</ul>
+				<img class="logo" src="images/karma-logo copy.svg" alt="Logo Image" widgth="26px">
+			</div>
+			<section class="introduction">
+				<div class="content">
+					<h1>Introducing Karma</h1>
+					<h3>Bring WiFi with you, everywhere you go.</h3>
+					<button class"big-button">Learn More</button>
+				</div>	
+			</section>							
+		</nav>
 </html>
